--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,9 +2,9 @@
 
 <h2>YOUR DASHBOARD</h2>
 
-<div class="user-options">
+<form class="user-options" method="get" action="/">
   <button type="submit">Log Out</button>
-</div>
+</form>
 
 <div id="js-list-books-here">
 
