--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,12 +2,29 @@
 
 <h2>Work on your draft, make it awesome!</h2>
 
-
-<h2>Login</h2>
-<form class="create-form">
+<h2>Register</h2>
+<form class="create-form" method="POST" action="/register">
 
   <div class="form-group">
-    <label for="username">Username or Email Address</label>
+    <label for="username">Signup with your Username or Email Address</label>
+    <input type="text" id="usernameField" name="name">
+  </div>
+
+  <div class="form-group">
+    <label for="pw">Password</label><br>
+    <input type="password" id="passwordField" name="pw">
+  </div>
+
+  <button type="submit">Register!</button>
+</form>
+
+
+
+<h2>Login</h2>
+<form class="create-form" method="GET" action="/dashboard">
+
+  <div class="form-group">
+    <label for="username">Login with your Username or Email Address</label>
     <input type="text" id="usernameField" name="name">
   </div>
 
