--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,17 @@
-<h1>Online Writing Journal!</h1>
+<!-- BEGIN HEADER -->
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+        <h1 class="display-4">Online Writing Journal!</h1>
+        <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+    </div>
+</div>
 
-<h2>Work on your draft, make it awesome!</h2>
+<h2>LOGIN</h2>
+<!-- END HEADER -->
 
 
-<h2>Login</h2>
+
+<!-- BEGIN CONTENT -->
 <form class="create-form">
 
   <div class="form-group">
@@ -18,3 +26,13 @@
 
   <button type="submit">Login</button>
 </form>
+<!-- END CONTENT -->
+
+
+
+
+<!-- BEGIN FOOTER -->
+<footer>
+    Copyright
+</footer>
+<!-- END FOOTER -->
