--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,10 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Online Writing Journal</title>
+
+    <!-- JQUERY -->
     <script src="https://code.jquery.com/jquery.js"></script>
+
+    <!-- BOOTSTRAP CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
        crossorigin="anonymous">
-    <script src="assets/css/style.css"></script><!-- Check this!!! -->
+    
+    <!-- CUSTOM CSS -->
+    <link href="assets/css/style.css" rel="stylesheet">
+    
 </head>
 
 <body>
