begin collecting http requests in client js file

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,6 +16,9 @@
     
     <!-- CUSTOM CSS -->
     <link href="assets/css/style.css" rel="stylesheet">
+
+    <!-- CUSTOM CLIENT-SIDE JS -->
+    <script src="assets/js/app.js"></script>
     
 </head>
 
