--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,15 +14,15 @@
 
   <div class="form-group">
     <label for="username">Signup with your Username or Email Address</label>
-    <input type="text" id="usernameField" name="name">
+    <input type="text" id="js-register-usernameField" name="name">
   </div>
 
   <div class="form-group">
     <label for="pw">Password</label><br>
-    <input type="password" id="passwordField" name="pw">
+    <input type="password" id="js-register-passwordField" name="pw">
   </div>
 
-  <button type="submit">Register!</button>
+  <button type="submit" id="js-register-submitButton">Register!</button>
 </form>
 
 
@@ -32,15 +32,15 @@
 
   <div class="form-group">
     <label for="username">Login with your Username or Email Address</label>
-    <input type="text" id="usernameField" name="name">
+    <input type="text" id="js-login-usernameField" name="name">
   </div>
 
   <div class="form-group">
     <label for="pw">Password</label><br>
-    <input type="password" id="passwordField" name="pw">
+    <input type="password" id="js-login-passwordField" name="pw">
   </div>
 
-  <button type="submit">Login</button>
+  <button type="submit" id="js-login-submitButton">Login</button>
 </form>
 <!-- END CONTENT -->
 
