this file has been deprecated: views/chapterselect.handlebars

--- a/views/chapterselect.handlebars
+++ b/views/chapterselect.handlebars
@@ -1,3 +1,11 @@
+{{!-- this file has been depricated by steph on 6-30-18 --}}
+{{!-- this file has been depricated by steph on 6-30-18 --}}
+{{!-- this file has been depricated by steph on 6-30-18 --}}
+{{!-- this file has been depricated by steph on 6-30-18 --}}
+{{!-- this file has been depricated by steph on 6-30-18 --}}
+{{!-- this file has been depricated by steph on 6-30-18 --}}
+{{!-- this file has been depricated by steph on 6-30-18 --}}
+
 <h1>Online Writing Journal!</h1>
 
 <h2>Chapter select for <span id="js-name-of-book-goes-here"></span></h2>
