--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -14,8 +14,8 @@
 <div id="js-place-books-here">
   {{#each books}}
   		<p><span class="label">Book Name:</span> {{this.book_name}}</p>
-      <button data-id="{{this.UserId}}" class="delquote">Delete Book</button>
-      <a href="/edit">Edit this Book</a>
+      <button data-id="{{this.id}}" class="jsClass-delete-book">Delete Book</button>
+      <a class="jsClass-edit-book" href="/edit">Edit this Book</a>
       <br><br>
   {{/each}}
 
