added npm path for static routing. arranged handlebars files for best practices. edited static route for public directory so it works. updated user-routes.js accordingly

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,12 +1,13 @@
 <!-- BEGIN HEADER -->
 <div class="jumbotron jumbotron-fluid">
-    <div class="container">
-        <h1 class="display-4">Online Writing Journal!</h1>
-        <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+    <div class="container typewriter">
+        <h1 class="display-4">Online Writing Journal</h1>
     </div>
 </div>
 
-<h2>LOGIN</h2>
+{{!-- <div class="typewriter">
+  <h1>Welcome to the Online Writing Journal</h1>
+</div> --}}
 <!-- END HEADER -->
 
 <h2>Register</h2>
