--- a/views/layouts/edit.handlebars
+++ b/views/layouts/edit.handlebars
@@ -1,8 +1,7 @@
 <!-- BEGIN HEADER -->
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
-        <h1 class="display-4">Online Writing Journal!</h1>
-        <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+        <h1 class="display-4">Online Writing Journal</h1>
     </div>
 </div>
 
