--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,10 +15,10 @@
        crossorigin="anonymous">
     
     <!-- CUSTOM CSS -->
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="/public/assets/css/style.css" rel="stylesheet">
 
     <!-- CUSTOM CLIENT-SIDE JS -->
-    <script src="assets/js/app.js"></script>
+    <script src="/public/assets/js/app.js"></script>
     
 </head>
 
