successful login redirects to dashboard and populates with books

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -26,6 +26,10 @@
   <button type="submit" id="js-register-submitButton">Register!</button>
 </form>
 
+<div id="js-homepage-register-message">
+  
+</div>
+
 
 
 <h2>Login</h2>
