--- a/views/layouts/dashboard.handlebars
+++ b/views/layouts/dashboard.handlebars
@@ -12,8 +12,8 @@
 
 <div id="js-place-books-here">
   {{#each books}}
-  		<p><span class="label">Book Name:</span> {{this.book_name}}</p>
-      <button data-id="{{this.id}}" class="jsClass-delete-book">Delete Book</button>
+  		<p><span class="label">Book Name:</span> {{this.dataValues.book_name}}</p>
+      <button data-id="{{this.dataValues.id}}" class="jsClass-delete-book">Delete Book</button>
       <a class="jsClass-edit-book" href="/edit">Edit this Book</a>
       <br><br>
   {{/each}}
