--- a/views/layouts/dashboard.handlebars
+++ b/views/layouts/dashboard.handlebars
@@ -5,20 +5,15 @@
   </div>
 </div>
 
+<h2>Welcome, <span id="js-username-goes-here-1">{{name}}</span></h2>
+
 <h2>YOUR DASHBOARD</h2>
 <!-- END HEADER -->
 
 <br>
 
 <div id="js-place-books-here">
-  {{#each books}}
-  		<p><span class="label">Book Name:</span> {{this.dataValues.book_name}}</p>
-      <button data-id="{{this.dataValues.id}}" class="jsClass-delete-book">Delete Book</button>
-      <a class="jsClass-edit-book" href="/edit">Edit this Book</a>
-      <br><br>
-  {{/each}}
 
-  <br>
 </div>
 
 
@@ -29,14 +24,9 @@
 </div>
 
 
-<form class="user-options" method="get" action="/">
+<form class="user-options" method="get" action="/logout">
   <button type="submit">Log Out</button>
 </form>
-
-<div id="js-list-books-here">
-
-    <!-- LIST BOOKS HERE -->
-</div>
 
 <!-- END CONTENT -->
 
@@ -47,6 +37,35 @@
 
 <!-- BEGIN FOOTER -->
 <footer>
-    Copyright
+  Copyright
 </footer>
 <!-- END FOOTER -->
+
+<script>
+  $(document).ready(function () {
+    $.ajax({
+      method: 'GET',
+      url: '/books',
+      data: {}
+    }).then(function (response) {
+      for (var i = 0; i < response.length; i++) {
+        var bookListing = $('<div>');
+        bookListing.append(`<p><span class="label">Book Name:</span>${response[i].dataValues.book_name}</p>`);
+        bookListing.append(`<button data-id="${this.dataValues.id}" class="jsClass-delete-book">Delete Book</button>`);
+        bookListing.append(`<a class="jsClass-edit-book" href="/edit">Edit this Book</a><br><br>`);
+        $('#js-place-books-here').append(bookListing);
+      }
+    });
+  });
+
+
+
+</script> 
+
+{{!-- {{#each books}}
+<p>
+  <span class="label">Book Name:</span> {{this.dataValues.book_name}}</p>
+<button data-id="{{this.dataValues.id}}" class="jsClass-delete-book">Delete Book</button>
+<a class="jsClass-edit-book" href="/edit">Edit this Book</a>
+<br>
+<br> {{/each}} --}}
