--- a/views/layouts/edit.handlebars
+++ b/views/layouts/edit.handlebars
@@ -1,11 +1,22 @@
 <!-- BEGIN HEADER -->
-<div class="jumbotron jumbotron-fluid">
-    <div class="container">
-        <h1 class="display-4">Online Writing Journal</h1>
+{{> headers/header}}
+
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <nav class="breadcrumb">
+                <a class="breadcrumb-item" href="../dashboard/">Your Dashboard</a>
+                <span class="breadcrumb-item active">Insert Name of Book Here</span>
+            </nav>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <h2 class="page-title">Editing "Insert Name of Book Here"</h2>
+        </div>
     </div>
 </div>
 
-<h2>EDIT BOOK</h2>
 <!-- END HEADER -->
 
 
@@ -35,15 +46,3 @@
     </div>
 </div>
 <!-- END CONTENT -->
-
-
-
-
-
-
-
-<!-- BEGIN FOOTER -->
-<footer>
-    Copyright
-</footer>
-<!-- END FOOTER -->
