--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,7 +1,91 @@
+/* *******************************************/
+/* DESKTOP (DEFAULT) */
+/* *******************************************/
+
+
 /* GLOBAL SELECTORS */
-h1, h2 {
-  font-family: monospace;
+html,
+body {
+    box-sizing: border-box;
+    /* duplicated font-family in case this needs to be part of a SASS template and body font needs to be different than site-title and page-title font */
+    font-family:  monospace, 'Times New Roman', Times, serif;
 }
+a {
+  color: red;
+}
+a:hover {
+  color: maroon;
+  text-decoration: none;
+}
+.jumbotron {
+  background-color: transparent;
+}
+header.header-subpage .jumbotron {
+  padding: 1rem 2rem 4rem;
+}
+header{
+  background: url("../images/bg-crumpled-paper.jpg") ;
+  background-color: bisque;
+  position: relative;
+}
+
+.logout {
+  margin-top: 2rem;
+}
+.logout a {
+  background-color: bisque;
+  padding: .5rem;
+  border-radius: .25rem;
+}
+
+
+/* BEGIN STICKY FOOTER */
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  margin-bottom: 60px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  /* Set the fixed height of the footer here */
+  line-height: 60px;
+  /* Vertically center the text there */
+  text-align: center;
+}
+/* END STICKY FOOTER */
+
+
+
+.site-title {
+  font-family: monospace, 'Times New Roman', Times, serif;
+  -webkit-text-stroke: 1px black;
+  color: white;
+  text-shadow:
+      3px 3px 0 #000,
+    -1px -1px 0 #000,  
+     1px -1px 0 #000,
+     -1px 1px 0 #000,
+      1px 1px 0 #000;
+}
+
+.breadcrumb {
+  background-color: bisque;
+}
+
+.page-title {
+  font-family: monospace, 'Times New Roman', Times, serif;
+  font-size: 3rem;
+  margin-bottom:2rem;
+}
+
+
+
+
 
 /* JUMBOTRON */
 .jumbotron {
@@ -19,10 +103,12 @@ h1, h2 {
 
   /* The typwriter cursor */
   white-space: nowrap;
+  
   /* Keeps the content on a single line */
   margin: 0 auto;
   /* Gives that scrolling effect as the typing happens */
-  letter-spacing: .15em;
+  /* letter-spacing: .15em; */
+
   /* Adjust as needed */
   /* animation: typing 3.5s steps(40, end), blink-caret .75s step-end infinite;
   display: inline-block; */
@@ -50,4 +136,37 @@ h1, h2 {
   50% {
     border-color: orange;
   }
+}
+
+/* FOOTER */
+
+
+/* *******************************************/
+/* TABLET */
+/* *******************************************/
+@media (min-width: 768px) and (max-width: 991px) { 
+  .display-4 {
+
+  }
+  .site-title {
+    color:orange;
+  }
+  .page-title {
+    color:orange;
+  }
+ }
+
+
+/* *******************************************/
+/* MOBILE */
+/* *******************************************/
+@media (min-width: 1px) and (max-width: 767px) { 
+  
+  .site-title {
+    color:blue;
+  }
+  .page-title {
+    color:blue;
+  }
+
 }
