move functioning form button to header.handlebars

--- a/views/layouts/dashboard.handlebars
+++ b/views/layouts/dashboard.handlebars
@@ -33,22 +33,15 @@
       <button id="js-new-book-submit">Create New Book!</button>
     </div>
 
+    {{!-- steph moved to header.handlebars file
     <form class="user-options" method="get" action="/logout">
       <button type="submit">Log Out</button>
-    </form>
+    </form> --}}
 
     <!-- END CONTENT -->
 
 
 
-
-
-
-    <!-- BEGIN FOOTER -->
-    <footer>
-      Copyright
-    </footer>
-    <!-- END FOOTER -->
 
     <script>
       $(document).ready(function () {
@@ -69,13 +62,9 @@
 
 
 
-    </script> {{!-- {{#each books}}
-    <p>
-      <span class="label">Book Name:</span> {{this.dataValues.book_name}}</p>
-    <button data-id="{{this.dataValues.id}}" class="jsClass-delete-book">Delete Book</button>
-    <a class="jsClass-edit-book" href="/edit">Edit this Book</a>
-    <br>
-    <br> {{/each}} --}}
+    </script>
+
+
   </div>
 </div>
 </div>
