--- a/views/partials/headers/header.handlebars
+++ b/views/partials/headers/header.handlebars
@@ -2,12 +2,25 @@
     <div class="container text-right">
         <div class="row">
             <div class="col-12 logout">
-                <a href="#">
+                {{!-- <a href="#">
                     <i class="fa fa-user-circle " aria-hidden="true"></i> Logout
-                </a>
+                </a> --}}
+                <form class="user-options" method="get" action="/logout">
+                    <button type="submit">
+                        <i class="fa fa-user-circle " aria-hidden="true"></i>
+                        Log Out
+                        </button>
+                </form>
             </div>
         </div>
-        
+
+
+
+
+
+
+
+
     </div>
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
