Revert "Steph styles3"

--- a/views/layouts/dashboard.handlebars
+++ b/views/layouts/dashboard.handlebars
@@ -1,70 +1,71 @@
 <!-- BEGIN HEADER -->
-{{> headers/header}}
-
-<div class="container">
-  <div class="row">
-    <div class="col-12">
-      <h2 class="page-title">Your Dashboard</h2>
-    </div>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">Online Writing Journal</h1>
   </div>
 </div>
 
-<h2>Welcome to your Dashboard,
-  <span id="js-username-goes-here-1">{{name}}</span>
-</h2>
+<h2>Welcome, <span id="js-username-goes-here-1">{{name}}</span></h2>
 
+<h2>YOUR DASHBOARD</h2>
 <!-- END HEADER -->
-<div class="container">
-  <div class="row">
-    <div class="col-12">
 
+<br>
 
-      <div id="js-place-books-here">
+<div id="js-place-books-here">
 
-      </div>
-
-      <br>
-    </div>
-
-
-
-    <div id="js-new-book-container">
-      <input id="js-new-book-input">
-      <button id="js-new-book-submit">Create New Book!</button>
-    </div>
-
-    {{!-- steph moved to header.handlebars file
-    <form class="user-options" method="get" action="/logout">
-      <button type="submit">Log Out</button>
-    </form> --}}
-
-    <!-- END CONTENT -->
-
-
-
-
-    <script>
-      $(document).ready(function () {
-        $.ajax({
-          method: 'GET',
-          url: '/books',
-          data: {}
-        }).then(function (response) {
-          for (var i = 0; i < response.length; i++) {
-            var bookListing = $('<div>');
-            bookListing.append(`<p><span class="label">Book Name:</span>${response[i].dataValues.book_name}</p>`);
-            bookListing.append(`<button data-id="${this.dataValues.id}" class="jsClass-delete-book">Delete Book</button>`);
-            bookListing.append(`<a class="jsClass-edit-book" href="/edit">Edit this Book</a><br><br>`);
-            $('#js-place-books-here').append(bookListing);
-          }
-        });
-      });
-
-
-
-    </script>
-
-
-  </div>
 </div>
+
+
+
+<div id="js-new-book-container">
+  <input id="js-new-book-input">
+  <button id="js-new-book-submit">Create New Book!</button>
 </div>
+
+
+<form class="user-options" method="get" action="/logout">
+  <button type="submit">Log Out</button>
+</form>
+
+<!-- END CONTENT -->
+
+
+
+
+
+
+<!-- BEGIN FOOTER -->
+<footer>
+  Copyright
+</footer>
+<!-- END FOOTER -->
+
+<script>
+  $(document).ready(function () {
+    $.ajax({
+      method: 'GET',
+      url: '/books',
+      data: {}
+    }).then(function (response) {
+      for (var i = 0; i < response.length; i++) {
+        var bookListing = $('<div>');
+        bookListing.append(`<p><span class="label">Book Name:</span>${response[i].dataValues.book_name}</p>`);
+        bookListing.append(`<button data-id="${this.dataValues.id}" class="jsClass-delete-book">Delete Book</button>`);
+        bookListing.append(`<a class="jsClass-edit-book" href="/edit">Edit this Book</a><br><br>`);
+        $('#js-place-books-here').append(bookListing);
+      }
+    });
+  });
+
+
+
+</script> 
+
+{{!-- {{#each books}}
+<p>
+  <span class="label">Book Name:</span> {{this.dataValues.book_name}}</p>
+<button data-id="{{this.dataValues.id}}" class="jsClass-delete-book">Delete Book</button>
+<a class="jsClass-edit-book" href="/edit">Edit this Book</a>
+<br>
+<br> {{/each}} --}}
