--- a/views/layouts/dashboard.handlebars
+++ b/views/layouts/dashboard.handlebars
@@ -4,14 +4,17 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <h2 class="page-title">Your Dashboard</h2>
+      <h2 class="page-title">
+        Welcome to your Dashboard
+        <span id="js-username-goes-here-1">{{name}}</span>
+        </h2>
     </div>
   </div>
 </div>
 
-<h2>Welcome to your Dashboard,
+{{!-- <h2>Welcome to your Dashboard
   <span id="js-username-goes-here-1">{{name}}</span>
-</h2>
+</h2> --}}
 
 <!-- END HEADER -->
 <div class="container">
