--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,10 @@
 <!-- BEGIN HEADER -->
-<div class="jumbotron jumbotron-fluid">
+{{!-- <div class="jumbotron jumbotron-fluid">
     <div class="container typewriter">
         <h1 class="display-4">Online Writing Journal</h1>
     </div>
-</div>
+</div> --}}
+{{> headers/header-login}}
 
 {{!-- <div class="typewriter">
   <h1>Welcome to the Online Writing Journal</h1>
