--- a/views/layouts/edit.handlebars
+++ b/views/layouts/edit.handlebars
@@ -1,9 +1,10 @@
 <!-- BEGIN HEADER -->
-<div class="jumbotron jumbotron-fluid">
+{{!-- <div class="jumbotron jumbotron-fluid">
     <div class="container">
         <h1 class="display-4">Online Writing Journal</h1>
     </div>
-</div>
+</div> --}}
+{{> headers/header}}
 
 <h2>EDIT BOOK</h2>
 <!-- END HEADER -->
