--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,10 @@
     <!-- BOOTSTRAP CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
        crossorigin="anonymous">
-    
+
+    <!-- FONT AWESOME -->
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+       
     <!-- CUSTOM CSS -->
     <link href="/public/assets/css/style.css" rel="stylesheet">
 
@@ -24,6 +27,18 @@
 
 <body>
     {{{ body }}}
+
+    <footer class="footer">
+        <div class="container">
+            <span class="text-muted">
+                Copyright &copy;
+                <script type="text/javascript">
+                    document.write(new Date().getFullYear());
+                </script>
+            </span>
+        </div>
+    </footer>
+    
 </body>
 
 </html>
