--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,60 +1,53 @@
 <!-- BEGIN HEADER -->
-{{!-- <div class="jumbotron jumbotron-fluid">
-    <div class="container typewriter">
-        <h1 class="display-4">Online Writing Journal</h1>
+{{> headers/header-login}} 
+<!-- END  HEADER -->
+
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+
+      <h2>Register</h2>
+      <form class="create-form" method="POST" action="/register">
+
+        <div class="form-group">
+          <label for="username">Signup with your Username or Email Address</label>
+          <input type="text" id="js-register-usernameField" name="name">
+        </div>
+
+        <div class="form-group">
+          <label for="pw">Password</label>
+          <br>
+          <input type="password" id="js-register-passwordField" name="pw">
+        </div>
+
+        <button type="submit" id="js-register-submitButton">Register!</button>
+      </form>
+
+      <div id="js-homepage-register-message">
+
+      </div>
+
+
+
+      <h2>Login</h2>
+      <form class="create-form" method="GET" action="/dashboard">
+
+        <div class="form-group">
+          <label for="username">Login with your Username or Email Address</label>
+          <input type="text" id="js-login-usernameField" name="name">
+        </div>
+
+        <div class="form-group">
+          <label for="pw">Password</label>
+          <br>
+          <input type="password" id="js-login-passwordField" name="pw">
+        </div>
+
+        <button type="submit" id="js-login-submitButton">Login</button>
+      </form>
+
     </div>
-</div> --}}
-{{> headers/header-login}}
-
-{{!-- <div class="typewriter">
-  <h1>Welcome to the Online Writing Journal</h1>
-</div> --}}
-<!-- END HEADER -->
-
-<h2>Register</h2>
-<form class="create-form" method="POST" action="/register">
-
-  <div class="form-group">
-    <label for="username">Signup with your Username or Email Address</label>
-    <input type="text" id="js-register-usernameField" name="name">
   </div>
-
-  <div class="form-group">
-    <label for="pw">Password</label><br>
-    <input type="password" id="js-register-passwordField" name="pw">
-  </div>
-
-  <button type="submit" id="js-register-submitButton">Register!</button>
-</form>
-
-<div id="js-homepage-register-message">
-  
 </div>
-
-
-
-<h2>Login</h2>
-<form class="create-form" method="GET" action="/dashboard">
-
-  <div class="form-group">
-    <label for="username">Login with your Username or Email Address</label>
-    <input type="text" id="js-login-usernameField" name="name">
-  </div>
-
-  <div class="form-group">
-    <label for="pw">Password</label><br>
-    <input type="password" id="js-login-passwordField" name="pw">
-  </div>
-
-  <button type="submit" id="js-login-submitButton">Login</button>
-</form>
 <!-- END CONTENT -->
 
-
-
-
-<!-- BEGIN FOOTER -->
-<footer>
-    Copyright
-</footer>
-<!-- END FOOTER -->
