--- a/views/layouts/edit.handlebars
+++ b/views/layouts/edit.handlebars
@@ -1,16 +1,27 @@
 <!-- BEGIN HEADER -->
-{{!-- <div class="jumbotron jumbotron-fluid">
-    <div class="container">
-        <h1 class="display-4">Online Writing Journal</h1>
-    </div>
-</div> --}}
 {{> headers/header}}
 
-<h2>EDIT BOOK</h2>
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <nav class="breadcrumb">
+                <a class="breadcrumb-item" href="../dashboard/">Your Dashboard</a>
+                <span class="breadcrumb-item active">Insert Name of Book Here</span>
+            </nav>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <h2 class="page-title">Editing 
+                "
+                <span id="js-name-of-book-goes-here"></span>
+                "
+            </h2>
+        </div>
+    </div>
+</div>
+
 <!-- END HEADER -->
-
-
-
 
 
 <!-- BEGIN CONTENT -->
@@ -41,10 +52,3 @@
 
 
 
-
-
-<!-- BEGIN FOOTER -->
-<footer>
-    Copyright
-</footer>
-<!-- END FOOTER -->
