--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -184,11 +184,16 @@ EDITOR STYLES by Craig Jul-4-18
   border: 1px solid black;
   border-radius: 2px;
   background-color: #eee;
+  text-align: center;
 }
 
 .css-list-chapters-here p {
   padding-left: 5px;
   padding-right: 5px;
+}
+
+.css-list-chapters-here input {
+  margin-right: 5px;
 }
 
 .css-chapter-listing {
@@ -218,5 +223,12 @@ EDITOR STYLES by Craig Jul-4-18
   width: 100%;
   margin: 0;
   min-height: 150px;
+}
+
+.css-edit-chapter-interface-textarea,
+#js-edit-chapter-interface-button-save,
+#js-edit-chapter-interface-button-revert,
+#js-edit-chapter-interface-button-delete
+ {
   cursor: not-allowed;
 }
