--- a/views/layouts/edit.handlebars
+++ b/views/layouts/edit.handlebars
@@ -6,17 +6,14 @@
         <div class="col-12">
             <nav class="breadcrumb">
                 <a class="breadcrumb-item" href="../dashboard/">Your Dashboard</a>
-                <span class="breadcrumb-item active">Insert Name of Book Here</span>
+                <span class="breadcrumb-item active" id="js-directory-book-title">Insert Name of Book Here</span>
             </nav>
         </div>
     </div>
     <div class="row">
         <div class="col-12">
-            <h2 class="page-title">Editing 
-                "
-                <span id="js-name-of-book-goes-here"></span>
-                "
-            </h2>
+            <h2 class="page-title">Editing <span id="js-edit-chapter-title-display"></span>
+            <span id="js-edit-book-title-display"></span></h2>
         </div>
     </div>
 </div>
