--- a/views/layouts/edit.handlebars
+++ b/views/layouts/edit.handlebars
@@ -5,15 +5,17 @@
     <div class="row">
         <div class="col-12">
             <nav class="breadcrumb">
-                <a class="breadcrumb-item" href="../dashboard/">Your Dashboard</a>
+                <a class="breadcrumb-item" id="js-breadcrumb" href="../dashboard/">Your Dashboard</a>
                 <span class="breadcrumb-item active" id="js-directory-book-title">Insert Name of Book Here</span>
             </nav>
         </div>
     </div>
     <div class="row">
         <div class="col-12">
-            <h2 class="page-title">Editing <span id="js-edit-chapter-title-display"></span>
-            <span id="js-edit-book-title-display"></span></h2>
+            <h2 class="page-title">Editing
+                <span id="js-edit-chapter-title-display"></span>
+                <span id="js-edit-book-title-display"></span>
+            </h2>
         </div>
     </div>
 </div>
@@ -45,7 +47,9 @@
 </div>
 <!-- END CONTENT -->
 
-
-
-
-
+<script type="text/javascript">
+$(document).ready(function () {
+    var UserId = {{ UserId }};
+    $('#js-breadcrumb').attr('href', `/dashboard/${UserId}`);   
+});
+</script>
