--- a/views/layouts/dashboard.handlebars
+++ b/views/layouts/dashboard.handlebars
@@ -17,38 +17,64 @@
 
 <!-- BEGIN CONTENT -->
 <div class="container">
+
+  <!-- BEGIN ADD BOOKS SECTION -->
   <div class="row">
 
-    <!-- BEGIN BOOKS COLUMN -->
+
+    <form id="js-new-book-container" class="form-inline"></form>
+    <div class="col-12 input-group mb-3">
+      <div class="input-group-prepend">
+        <button class="btn btn-outline-secondary" type="button">
+          <i class="fa fa-book" aria-hidden="true"></i>
+          Create New Book
+        </button>
+      </div>
+      <input type="text" class="form-control" placeholder="New Book Title" aria-label="New Book Title" aria-describedby="basic-addon1">
+    </div>
+    </form>
+
+  </div>
+  <!-- END ADD BOOKS SECTION -->
+
+  <!-- BEGIN LIST BOOKS SECTION -->
+  <div class="row">
+
     <div class="col-12">
 
-
-      <div id="js-place-books-here">
-
-      </div>
-
-
-      <div id="js-new-book-container">
-        <input id="js-new-book-input">
-        <button id="js-new-book-submit">Create New Book!</button>
+      <!-- BOOKS INSERTED FROM DATABASE -->
+      <div id="js-place-books-here" class="book-container">
       </div>
 
     </div>
-    <!-- END BOOKS COLUMN -->
-
-
 
   </div>
+  <!-- END LIST BOOKS SECTION -->
+
 </div>
-
-
+</div>
 <!-- END CONTENT -->
 
 
-
-
-
 <script>
+
+  /*
+    $(document).ready(function () {
+      $.ajax({
+        method: 'GET',
+        url: '/books',
+        data: {}
+      }).then(function (response) {
+        console.log(response)
+        for (var i = 0; i < response.length; i++) {
+          var bookListing = $('<div>');
+          bookListing.append(`<p><span class="label">Book Name:</span>${response[i]}</p>`);
+          bookListing.append(`<button data-id="${response[i]}" class="jsClass-delete-book">Delete Book</button>`);
+          bookListing.append(`<a class="jsClass-edit-book" href="/edit">Edit this Book</a><br><br>`);
+          $('#js-place-books-here').append(bookListing);
+        }
+      });
+  */
   $(document).ready(function () {
     $.ajax({
       method: 'GET',
@@ -57,23 +83,24 @@
     }).then(function (response) {
       console.log(response)
       for (var i = 0; i < response.length; i++) {
-        var bookListing = $('<div>');
-        bookListing.append(`<p><span class="label">Book Name:</span>${response[i]}</p>`);
-        bookListing.append(`<button data-id="${response[i]}" class="jsClass-delete-book">Delete Book</button>`);
-        bookListing.append(`<a class="jsClass-edit-book" href="/edit">Edit this Book</a><br><br>`);
+        var bookListing = $('<div class="book-card">');
+        bookListing.append(`<div class="book-spine">${response[i]}</div>`);
+        bookListing.append(`<a href="#" data-id="${response[i]}" class="jsClass-delete-book">Delete</a> | `);
+        bookListing.append(`<a class="jsClass-edit-book" href="/edit">Edit</a><br><br>`);
         $('#js-place-books-here').append(bookListing);
       }
     });
 
-    $('body').on('click', '.jsClass-delete-book', function(){
+
+    $('body').on('click', '.jsClass-delete-book', function () {
       var title = $(this).data('id');
       var searchTitle = title.replace(/ /g, "_");
       $.ajax({
-            method: 'DELETE',
-            url: '/books/' + searchTitle
-        }).then(function (response) {
-            location.reload();
-        });
+        method: 'DELETE',
+        url: '/books/' + searchTitle
+      }).then(function (response) {
+        location.reload();
+      });
     });
   });
 
