added id to book create

--- a/views/layouts/dashboard.handlebars
+++ b/views/layouts/dashboard.handlebars
@@ -25,12 +25,12 @@
     <form id="js-new-book-container" class="form-inline"></form>
     <div class="col-12 input-group mb-3">
       <div class="input-group-prepend">
-        <button class="btn btn-outline-secondary" type="button">
+        <button class="btn btn-outline-secondary" id='js-new-book-submit' type="button">
           <i class="fa fa-book" aria-hidden="true"></i>
           Create New Book
         </button>
       </div>
-      <input type="text" class="form-control" placeholder="New Book Title" aria-label="New Book Title" aria-describedby="basic-addon1">
+      <input type="text" id='js-new-book-input' class="form-control" placeholder="New Book Title" aria-label="New Book Title" aria-describedby="basic-addon1">
     </div>
     </form>
 
