--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -100,6 +100,15 @@ body {
   background-color: darkred;
   border-color: darkred;
 }
+.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show>.btn-primary.dropdown-toggle {
+  color: #fff;
+  background-color: darkred;
+  border-color: darkred;
+}
+.btn-primary.focus, .btn-primary:focus {
+  box-shadow: 0 0 0 0.2rem rgba(165, 42, 42, .5)
+  ;
+}
 
 .btn-secondary {
   color: #000;
@@ -109,8 +118,17 @@ body {
 
 .btn-secondary:hover {
   color: #000000;
-  background-color: bisque;
-  border-color: bisque;
+  background-color: tan;
+  border-color: tan;
+}
+.btn-secondary:not(:disabled):not(.disabled).active, .btn-secondary:not(:disabled):not(.disabled):active, .show>.btn-secondary.dropdown-toggle {
+  color: #000000;
+  background-color: tan;
+  border-color: tan;
+}
+.btn-secondary.focus, .btn-secondary:focus {
+  box-shadow: 0 0 0 0.2rem rgba(255, 228, 196, .5)
+  ;
 }
 
 /* LOGIN */
